[package]
version = "0.1.0"
name = "rusty-poketimes"
authors = ["Mike Zupper"]
description = "Rust Port of the Poketimes React/Redux App"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8.0"
serde = { version = "1.0.117", features = ["derive"] }
futures = "0.3.6"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']